Fix/2014 tabs weird behavior in safari and ff (#2616)
* trying to investigate the problem with scrolling/selecting tab

* investigating ff issue when selecting a tab

* Partially fixing tabs for safari and ff (still doesn't work using zoom in/out in storybook)

* Partially working with zoom in and out in storybook, still problems with scrolling to the right tab on render

* partially fixing scrolling to the selected tab, still sometimes broken on load and totally broken height of the indicator in the vertical version

* small description change

* fixing horizontal overflow version, still a problem with vertical overflow in ff

* trying to investigate the issue in ff with vertical overflow example

* trying to fix the issue with resize observer for ff

* trying to fix the issue with vertical variant for ff

* not showing menu button in ff in vertical variant

* in ff vertical overflow fixing indicator height and scrolling to the right place, but still menu button is broken

* vertical overflow fixed for ff with setTimeout instead of raf (problems with raf in ff)

* some cleanup

* cleanup

* cleanup

* fixing vertical variant

* more cleanup

* fixing tests

* changeset

* changes after review

--- a/packages/components/tabs/src/tab-group.scss
+++ b/packages/components/tabs/src/tab-group.scss
@@ -92,6 +92,7 @@
     overflow: clip scroll;
     overscroll-behavior-y: contain;
     scroll-snap-points-y: repeat(100%);
+    scroll-snap-type: block;
   }
 
   [part='tablist'] {
@@ -162,7 +163,7 @@
   overscroll-behavior-x: contain;
   scroll-behavior: auto;
   scroll-snap-points-x: repeat(100%);
-  scroll-snap-type: x mandatory;
+  scroll-snap-type: inline;
   scrollbar-width: none;
 
   &::-webkit-scrollbar {
@@ -184,13 +185,13 @@
 .indicator {
   background: var(--sl-color-border-selected);
   block-size: var(--sl-size-025);
-  inline-size: 100px; // Default value; actual width depends on scale transform
+  inline-size: 100px; // Default value; actual width depends on calculated value
   inset: auto auto 0 0;
   opacity: 0;
   position: absolute;
-  scale: 0 1;
   transform-origin: center left;
-  transition-property: scale, translate;
+  transition-property:
+    width, height, translate; // TODO: `width` and `height` are not animated on the GPU, but `scale` is not working properly in Safari e.g. when zooming in/out (so we cannot use it right now). Change to `scale` when Safari supports it in a proper way.
   transition-timing-function: ease-in-out;
   translate: 0;
 
